k8s/overlays/azure/authentication/keycloak-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak
  labels:
    app: gridcapa
    component: auth
    env: azure-common
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridcapa
      component: auth
      env: azure-common
  template:
    metadata:
      labels:
        app: gridcapa
        component: auth
        env: azure-common
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:18.0.0
          args: ["start"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/opt/keycloak/data/h2/"
              name: keycloak-storage
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 35
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1Gi"
      volumes:
        - name: keycloak-storage
          persistentVolumeClaim:
            claimName: keycloak-storage
      restartPolicy: Always
