k8s/overlays/azure/authentication/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: gridcapa
    component: auth
    env: azure-common
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: auth
    env: azure-common
  ports:
    - port: 80
      targetPort: 8080
      name: http
